Fix column display on iOS in Receive page

--- a/src/pages/receive/receive.scss
+++ b/src/pages/receive/receive.scss
@@ -48,7 +48,7 @@ page-receive {
 }
 
 @media (max-width: 670px) {
-    .col {
+    .receive-col {
         -webkit-flex-basis: auto !important;
     }
 }
